--- a/src/app/components/user.component.html
+++ b/src/app/components/user.component.html
@@ -21,7 +21,7 @@
           <i class="mr-2 icon-user-circle text-blue"></i>Profile
         </a>
         <!--<a href="#" class="list-group-item list-group-item-action"><i class="mr-2 icon-cogs text-yellow"></i>Settings</a>-->
-        <!--<a href="#" class="list-group-item list-group-item-action"><i class="mr-2 icon-security text-purple"></i>Change Password</a>-->
+        <a routerLink="/dashboard/change-password" class="list-group-item list-group-item-action"><i class="mr-2 icon-security text-purple"></i>Change Password</a>
       </div>
     </div>
   </div>
