--- a/src/app/components/home/overview.component.html
+++ b/src/app/components/home/overview.component.html
@@ -105,7 +105,14 @@
           </div>
         </div>
         <div style="border: solid #80808030 1px; padding: 20px; border-radius: 10px; margin: 20px; background-color: white">
-          <div style="font-size: 25px"><b>Data</b></div>
+          <div class="row">
+            <div class="col-6">
+              <div style="font-size: 25px"><b>Data</b></div>
+            </div>
+            <div class="col-6 text-right">
+              <button class="btn btn-default" (click)="doExportExcelData()"><i class="icon-print"></i> Export Excel</button>
+            </div>
+          </div>
           <hr/>
           <div class="card r-0 shadow">
             <div class="table-responsive">
