bug link + icon in button export

--- a/src/app/components/advertisement/statistics.component.html
+++ b/src/app/components/advertisement/statistics.component.html
@@ -117,7 +117,7 @@
               <div style="font-size: 25px"><b>Data</b></div>
             </div>
             <div class="col-6 text-right">
-              <button class="btn btn-default" (click)="doExportExcelData()">Export Excel</button>
+              <button class="btn btn-success" (click)="doExportExcelData()"><i class="icon-print"></i> Export Excel</button>
             </div>
           </div>
           <hr/>
