--- a/src/app/components/advertisement/view.advertisement.component.html
+++ b/src/app/components/advertisement/view.advertisement.component.html
@@ -25,9 +25,10 @@
               <table class="table table-striped table-hover r-0">
                 <thead>
                   <tr class="no-b" style="background-color: #c4e9ffa1; color: grey">
-                    <th style="font-size: 15px; font-weight: bold; min-width: 95px">ID</th>
+                    <th style="font-size: 15px; font-weight: bold; min-width: 95px; text-align: center">ID</th>
                     <th style="font-size: 15px; font-weight: bold">NAME</th>
                     <th style="font-size: 15px; font-weight: bold; min-width: 113px">DATE</th>
+                    <th style="font-size: 15px; font-weight: bold">STATISTICS</th>
                     <th style="font-size: 15px; font-weight: bold">TYPE</th>
                     <th style="font-size: 15px; font-weight: bold">ACTIVE</th>
                     <th style="font-size: 15px; font-weight: bold"></th>
@@ -35,19 +36,43 @@
                 </thead>
                 <tbody>
                   <tr *ngFor="let data of datas">
-                    <td>{{data.id}}</td>
+                    <td style="text-align: center">{{data.id}}</td>
                     <td>
                       <div>
-                        <div><b>{{data.name}}</b></div>
+                        <div><b style="font-size: 15px;">{{data.name}}</b></div>
+                        <div><small class="text-black-50">Group </small></div>
+                        <div><b style="font-size: 15px;">{{data.group.name}}</b></div>
                         <div><small class="text-black-50">Code </small></div>
-                        <div>{{data.code}}</div>
+                        <div><b style="font-size: 15px;">{{data.code}}</b></div>
                       </div>
                     </td>
                     <td>
-                      <div><small class="text-black-50">Start </small> <br> <b>{{dateFormat(data._start)}}</b></div>
-                      <div><small class="text-black-50">End </small> <br> <b>{{dateFormat(data._end)}}</b></div>
+                      <div>
+                        <div><small class="text-black-50">Start </small></div>
+                        <div><b style="font-size: 15px;">{{data._start}}</b></div>
+                        <div><small class="text-black-50">End </small></div>
+                        <div><b style="font-size: 15px;">{{data._end}}</b></div>
+                      </div>
                     </td>
-                    <td>{{data.type == "01" ? 'cpm' : data.type == "02" ? 'cpc' : data.type == "03" ? 'cpv' : data.type == "04" ? 'cpa' : data.type == "05" ? 'cpo' : ''}}</td>
+                    <td>
+                      <div>
+                        <div><small class="text-black-50">Impression </small></div>
+                        <div><b style="font-size: 15px;">{{data._impression}}</b></div>
+                        <div><small class="text-black-50">Click </small></div>
+                        <div><b style="font-size: 15px;">{{data._click}}</b></div>
+                        <div><small class="text-black-50">View </small></div>
+                        <div><b style="font-size: 15px;">{{data._view}}</b></div>
+                      </div>
+                    </td>
+                    <td>
+                      <div>
+                        <div><b style="font-size: 15px;">{{data.type == "01" ? 'cpm' : data.type == "02" ? 'cpc' : data.type == "03" ? 'cpv' : data.type == "04" ? 'cpa' : data.type == "05" ? 'cpo' : ''}}</b></div>
+                        <div><small class="text-black-50">Target </small></div>
+                        <div><b style="font-size: 15px;">{{data.target}}</b></div>
+                        <div><small class="text-black-50">Reach </small></div>
+                        <div><b style="font-size: 15px;">{{data.reach}}</b></div>
+                      </div>
+                    </td>
                     <td>
                       <div style="color: #008000a3; font-family: 'Lato', sans-serif; font-size: 25px" [hidden]="data.isActive == 0" >
                         <i class="icon icon-check-circle"></i>
