--- a/src/app/components/profile/change-password.component.html
+++ b/src/app/components/profile/change-password.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid animatedParent animateOnce">
+<!--<div class="container-fluid animatedParent animateOnce">
   <div class="animated fadeInUpShort go">
     <div class="row my-3">
       <div class="col-md-7 offset-md-2">
@@ -28,8 +28,8 @@
                   </div>
                 </li>
 
-                <!--<li class="list-group-item"><i class="icon icon-lock text-center"></i><strong class="s-12">Password</strong>-->
-                <!--<input class="form-control float-right s-12" type="text" name="password" [(ngModel)]="profileList.password" placeholder="Enter password"></li>-->
+                &lt;!&ndash;<li class="list-group-item"><i class="icon icon-lock text-center"></i><strong class="s-12">Password</strong>&ndash;&gt;
+                &lt;!&ndash;<input class="form-control float-right s-12" type="text" name="password" [(ngModel)]="profileList.password" placeholder="Enter password"></li>&ndash;&gt;
               </ul>
               <div class="card-body offset-md-10">
                 <button type="submit" class="btn btn-primary">Save</button>
@@ -38,6 +38,45 @@
           </form>
         </div>
 
+      </div>
+    </div>
+  </div>
+</div>-->
+
+
+<div class="container-fluid animatedParent animateOnce">
+  <div class="tab-content my-3" id="v-pills-tabContent">
+    <nav aria-label="breadcrumb" style="margin-bottom: 35px;">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">Change Password</li>
+      </ol>
+    </nav>
+    <div class="card shadow-lg"   style="max-width: 897px; margin: 0 auto">
+      <div class="card-header" style="text-align: center; background-color: #d2edff;">
+        <b>Change Profile</b>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" [routerLink]="['../']">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="card-body">
+        <form action="#" method="post" (submit)="change($event)">
+          <div class="form-group">
+            <label>*Old Password</label>
+            <input type="text" minlength="4" maxlength="100"  name="password_old" class="form-control" [(ngModel)]="changePassword.password_old" required />
+          </div>
+
+          <div class="form-group">
+            <label>*New Password</label>
+            <input type="text" minlength="4" maxlength="100"  name="password" class="form-control" [(ngModel)]="changePassword.password" required />
+          </div>
+
+          <div style="float: right">
+            <button type="button" class="btn btn-info" style="color: white; margin-right: 4px" [routerLink]="['../']">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+          </div>
+        </form>
+      </div>
+      <div class="card-footer" style="    background-color: #d2edff;">
       </div>
     </div>
   </div>
