--- a/src/app/components/navbar.component.html
+++ b/src/app/components/navbar.component.html
@@ -78,10 +78,12 @@
                <div class="pt-1">Apps</div>
              </a>
            </div>-->
-          <div class="col"><a routerLink="/dashboard/profile">
-            <i class="icon-user-circle indigo lighten-2 avatar  r-5"></i>
-            <div class="pt-1">Profile</div>
-          </a></div>
+          <div class="col">
+            <a routerLink="/dashboard/profile" style="color: #0d0d0d">
+              <i class="icon-user-circle indigo lighten-2 avatar  r-5"></i>
+              <div class="pt-1">PROFILE</div>
+            </a>
+          </div>
           <div class="col" data-toggle="modal" data-target="#modalLogout" >
             <a>
               <i class="icon-arrow-circle-right indigo lighten-2 avatar  r-5"></i>
@@ -131,12 +133,12 @@
       </div>
       <div class="modal-body">
         <h3>
-          Yakin ingin kluar?
+          Are you sure you want to log out?
         </h3>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">NO</button>
-        <button type="button" class="btn btn-primary" (click)="logout()" data-dismiss="modal">Yes</button>
+        <button type="button" class="btn btn-primary" (click)="logout()" data-dismiss="modal">YES</button>
       </div>
     </div>
   </div>
