ganti wording group

--- a/src/app/components/header.component.html
+++ b/src/app/components/header.component.html
@@ -2,7 +2,7 @@
   <section class="sidebar">
     <div class="w-80px mt-3 mb-3 ml-3">
       <!--<img src="assets/img/basic/logo.png" alt="" />-->
-      <h2>PUSHADS<br/><div style="font-size: 15px">GROUP</div></h2>
+      <h2>PUSHADS<br/><div style="font-size: 15px">MERCHANT</div></h2>
     </div>
     <cs-user name="Admin" image_photo="https://addons.thunderbird.net/static//img/zamboni/anon_user.png"></cs-user>
     <ul class="sidebar-menu">
