--- a/src/app/components/advertisement/statistics.component.html
+++ b/src/app/components/advertisement/statistics.component.html
@@ -9,6 +9,9 @@
             <li class="breadcrumb-item">Statistics</li>
           </ol>
         </nav>
+        <div style="text-align: center; font-size: 38px;margin: 10px; font-family: Impact">
+          {{this.advertisementData.name}}
+        </div>
         <div class="row" style="/*margin: 10px;*/padding: 25px">
           <div class="col-sm-3" style="/*margin: 10px;*/ padding: 10px;">
             <div style=" border: solid #80808030 1px; border-radius: 10px; padding: 20px;   background-color: white; cursor: pointer" (click)="dataSet.action = ['impression']; renderChart()">
