--- a/src/app/components/login.component.html
+++ b/src/app/components/login.component.html
@@ -8,12 +8,12 @@
             <h3 class="mt-2">Welcome Back</h3>
             <p class="p-t-b-20">Pushads Dashboard (Merchant)</p>
           </div>
-          <form action="#" method="post" (submit)="doLogin($event)">
+          <form action="#" method="post" (submit)="doLogin()">
             <div class="form-group has-icon"><i class="icon-envelope-o"></i>
-              <input type="text" name="username" class="form-control form-control-lg" [(ngModel)]="data.email" placeholder="Email Address" required />
+              <input type="text" name="username" class="form-control form-control-lg" [(ngModel)]="dataLogin.email" placeholder="Email Address" required />
             </div>
             <div class="form-group has-icon"><i class="icon-user-secret"></i>
-              <input type="password" name="password" class="form-control form-control-lg" [(ngModel)]="data.password" placeholder="Password" required />
+              <input type="password" name="password" class="form-control form-control-lg" [(ngModel)]="dataLogin.password" placeholder="Password" required />
             </div>
             <input type="submit" class="btn btn-primary btn-lg btn-block" value="Log In" />
             <p class="forget-pass">Forgot your password?</p>
