--- a/src/app/components/user.component.html
+++ b/src/app/components/user.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="float-left info">
         <h6 class="font-weight-light mt-2 mb-1">{{datas.firstname}}</h6>
-        <a href="#"><i class="icon-circle text-primary blink"></i> Online</a>
+        <a href="#"><i class="icon-circle text-success blink"></i> Online</a>
       </div>
     </div>
     <div class="clearfix"></div>
