--- a/src/app/components/advertisement/view.advertisement.component.html
+++ b/src/app/components/advertisement/view.advertisement.component.html
@@ -30,7 +30,7 @@
                     <th style="font-size: 15px; font-weight: bold; min-width: 113px">DATE</th>
                     <th style="font-size: 15px; font-weight: bold">STATISTICS</th>
                     <th style="font-size: 15px; font-weight: bold">TYPE</th>
-                    <th style="font-size: 15px; font-weight: bold">ACTIVE</th>
+                    <th style="font-size: 15px; font-weight: bold; text-align: center">STATUS</th>
                     <th style="font-size: 15px; font-weight: bold"></th>
                   </tr>
                 </thead>
@@ -74,11 +74,19 @@
                       </div>
                     </td>
                     <td>
-                      <div style="color: #008000a3; font-family: 'Lato', sans-serif; font-size: 25px" [hidden]="data.isActive == 0" >
+                      <!--<div style="color: #008000a3; font-family: 'Lato', sans-serif; font-size: 25px" [hidden]="data.isActive == 0" >
                         <i class="icon icon-check-circle"></i>
                       </div>
                       <div style="color: #ff0000a1; font-family: 'Lato', sans-serif; font-size: 25px" [hidden]="data.isActive == 1" >
                         <i class="icon icon-times-circle"></i>
+                      </div>-->
+                      <div style="font-size: 21px">
+                        <div *ngIf="data.isActive == true" style="margin: 5px; text-align: center">
+                          <div class="badge badge-success" style="padding: 6px 26px;">Active</div>
+                        </div>
+                        <div *ngIf="data.isActive != true" style="margin: 5px; text-align: center">
+                          <div class="badge badge-danger">Not Active</div>
+                        </div>
                       </div>
                     </td>
                     <td>
@@ -267,10 +275,10 @@
               </div>
               <div style="font-size: 21px">
                 <div *ngIf="list.isSelected == true" style="margin: 5px">
-                  <div class="badge badge-primary">Selected</div>
+                  <div class="badge badge-success">Selected</div>
                 </div>
                 <div *ngIf="list.isSelected != true" style="margin: 5px">
-                  <div class="badge badge-primary">Not Selected</div>
+                  <div class="badge badge-danger">Not Selected</div>
                 </div>
               </div>
             </div>
